--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
       "@babel/preset-env": "^7.26.0",
       "@babel/preset-react": "^7.25.9",
       "babel-loader": "^8.4.1",
+      "css-loader": "^7.1.2",
+      "style-loader": "^4.0.0",
       "webpack": "^5.96.1",
       "webpack-cli": "^4.10.0"
    }
