--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
       "dev": "webpack --mode development --watch"
    },
    "dependencies": {
+      "axios": "^1.7.7",
       "react": "^17.0.2",
       "react-dom": "^17.0.2",
       "recharts": "^2.13.3"
