--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
       "axios": "^1.7.7",
       "react": "^17.0.2",
       "react-dom": "^17.0.2",
+      "react-loader-spinner": "^6.1.6",
       "recharts": "^2.13.3"
    },
    "devDependencies": {
